Added more descriptions

--- a/ipynb_files/Data Cleaning for ML models.ipynb
+++ b/ipynb_files/Data Cleaning for ML models.ipynb
@@ -1147,13 +1147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Tuekey's Test for Price:\n",
       "        Multiple Comparison of Means - Tukey HSD, FWER=0.05         \n",
       "====================================================================\n",
       "  group1     group2    meandiff  p-adj    lower      upper    reject\n",
@@ -1175,6 +1176,7 @@
       "     Other  Rotterdam   429.7036    0.0   256.0498   603.3574   True\n",
       "--------------------------------------------------------------------\n",
       "\n",
+      "Tuekey's Test for Price_m2:\n",
       "     Multiple Comparison of Means - Tukey HSD, FWER=0.05     \n",
       "=============================================================\n",
       "  group1     group2   meandiff p-adj   lower    upper  reject\n",
@@ -1196,6 +1198,7 @@
       "     Other  Rotterdam    1.661  0.276  -0.5712  3.8931  False\n",
       "-------------------------------------------------------------\n",
       "\n",
+      "Tuekey's Test for Price:\n",
       "    Multiple Comparison of Means - Tukey HSD, FWER=0.05     \n",
       "============================================================\n",
       "group1 group2  meandiff  p-adj    lower      upper    reject\n",
@@ -1208,6 +1211,7 @@
       " Other   Room  -344.2879 0.0015  -587.0248  -101.5511   True\n",
       "------------------------------------------------------------\n",
       "\n",
+      "Tuekey's Test for Price_m2:\n",
       "Multiple Comparison of Means - Tukey HSD, FWER=0.05 \n",
       "====================================================\n",
       "group1 group2 meandiff p-adj   lower   upper  reject\n",
@@ -1220,6 +1224,7 @@
       " Other   Room   4.1737 0.0018  1.2005  7.1469   True\n",
       "----------------------------------------------------\n",
       "\n",
+      "Tuekey's Test for Price:\n",
       "             Multiple Comparison of Means - Tukey HSD, FWER=0.05             \n",
       "=============================================================================\n",
       "     group1           group2       meandiff p-adj    lower     upper   reject\n",
@@ -1229,6 +1234,7 @@
       "Temporary rental Unlimited period -127.5989 0.0597  -259.191    3.9933  False\n",
       "-----------------------------------------------------------------------------\n",
       "\n",
+      "Tuekey's Test for Price_m2:\n",
       "          Multiple Comparison of Means - Tukey HSD, FWER=0.05           \n",
       "========================================================================\n",
       "     group1           group2      meandiff p-adj   lower   upper  reject\n",
@@ -1248,8 +1254,8 @@
     "for c in categorical_features:\n",
     "    tukey = pairwise_tukeyhsd(endog = df['price'], groups = df[c], alpha = 0.05)\n",
     "    tukey2 = pairwise_tukeyhsd(endog = df['price_m2'], groups = df[c], alpha = 0.05)\n",
-    "    print(f\"{tukey}\\n\")\n",
-    "    print(f\"{tukey2}\\n\")\n"
+    "    print(f\"Tuekey's Test for Price:\\n{tukey}\\n\")\n",
+    "    print(f\"Tuekey's Test for Price_m2:\\n{tukey2}\\n\")\n"
    ]
   },
   {
