--- a/ipynb_files/ML models.ipynb
+++ b/ipynb_files/ML models.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,25 +135,25 @@
     ").columns\n",
     "\n",
     "for c in numeric_columns:\n",
-    "    X_train[c] = np.log1p(X_train[c])  # Use log1p to handle zero values safely\n",
+    "    X_train[c] = np.log1p(X_train[c])\n",
     "    X_test[c] = np.log1p(X_test[c])\n",
     "\n",
     "# Shift and log-transform 'house_age'\n",
-    "dfs = {'X_train': X_train, 'X_test': X_test}  # Use dictionary for better management\n",
-    "shift_age_value = abs(X_train['house_age'].min()) + 1  # Calculate shift value from training data\n",
+    "dfs = {'X_train': X_train, 'X_test': X_test}  \n",
+    "shift_age_value = abs(X_train['house_age'].min()) + 1 \n",
     "\n",
     "for name, d in dfs.items():\n",
-    "    d['house_age'] = np.log1p(d['house_age'] + shift_age_value)  # Apply consistent transformation\n",
+    "    d['house_age'] = np.log1p(d['house_age'] + shift_age_value)\n",
     "\n",
-    "# Transform target variable (if needed for modeling)\n",
-    "y_train = np.log1p(y_train)  # Log-transform the target variable\n",
+    "# Transform target variable\n",
+    "y_train = np.log1p(y_train) \n",
     "y_test = np.log1p(y_test)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -258,17 +258,17 @@
     }
    ],
    "source": [
-    "dfs = {'X_train': X_train, 'X_test': X_test}  # Use a dictionary to associate names with DataFrames\n",
+    "dfs = {'X_train': X_train, 'X_test': X_test} \n",
     "numeric_columns = X_train.select_dtypes(include=['float64', 'int64']).drop(columns=['energy_rating']).columns\n",
     "\n",
-    "for name, d in dfs.items():  # Iterate through the dictionary\n",
+    "for name, d in dfs.items(): \n",
     "    for column in numeric_columns:\n",
-    "        plt.figure(figsize=(4, 3))  # Set figure size\n",
-    "        plt.hist(d[column].dropna(), bins=20, edgecolor='k', alpha=0.7)  # Drop NaNs and plot histogram\n",
+    "        plt.figure(figsize=(4, 3))  \n",
+    "        plt.hist(d[column].dropna(), bins=20, edgecolor='k', alpha=0.7)  \n",
     "        plt.xlabel(column, fontsize=12)\n",
     "        plt.ylabel('Frequency', fontsize=12)\n",
     "        plt.title(f'Distribution of {name}_{column}', fontsize=14)\n",
-    "        plt.grid(axis='y', linestyle='--', alpha=0.7)  # Optional: Add gridlines\n",
+    "        plt.grid(axis='y', linestyle='--', alpha=0.7)  \n",
     "        plt.show()\n"
    ]
   },
